[package]
name = "bevy_async_x"
version = "0.1.0"
edition = "2021"

[dependencies]
macros = { path = "./macros" }
bevy_ecs = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_core = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_time = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_input = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_asset = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_state = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
bevy_tasks = { git = "https://github.com/bevyengine/bevy.git", branch = "main", features = ["multi_threaded"] }
bevy_utils = { git = "https://github.com/bevyengine/bevy.git", branch = "main", default-features = false }
futures-lite = "2"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", branch = "main" }
rxy_ui = { path = "../rxy_ui", features = ["bevy"] }
oneshot = "0.1"